--- a/src/view/FormSupri.form
+++ b/src/view/FormSupri.form
@@ -168,7 +168,8 @@
             <Component class="javax.swing.JTable" name="tableSupri">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="6" rowCount="0">
+                  <Table columnCount="7" rowCount="0">
+                    <Column editable="false" title="Primary" type="java.lang.Object"/>
                     <Column editable="false" title="Nome do equipamento" type="java.lang.Object"/>
                     <Column editable="false" title="Reutilizavel" type="java.lang.Boolean"/>
                     <Column editable="false" title="Data de Compra" type="java.lang.Object"/>
@@ -179,6 +180,11 @@
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
